--- a/index.html
+++ b/index.html
@@ -4,46 +4,80 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<title>reveal.js</title>
+		<title>Interactive Presentation Demo</title>
 
 		<link rel="stylesheet" href="css/reveal.css">
-		<link rel="stylesheet" href="css/theme/black.css">
+		<link rel="stylesheet" href="css/theme.css">
 
-		<!-- Theme used for syntax highlighting of code -->
-		<link rel="stylesheet" href="lib/css/zenburn.css">
-
-		<!-- Printing and PDF exports -->
-		<script>
-			var link = document.createElement( 'link' );
-			link.rel = 'stylesheet';
-			link.type = 'text/css';
-			link.href = window.location.search.match( /print-pdf/gi ) ? 'css/print/pdf.css' : 'css/print/paper.css';
-			document.getElementsByTagName( 'head' )[0].appendChild( link );
-		</script>
 	</head>
 	<body>
 		<div class="reveal">
-			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
-			</div>
+			<div class="slides" data-external="slides.html#section.master"> </div>
 		</div>
 
 		<script src="lib/js/head.min.js"></script>
 		<script src="js/reveal.js"></script>
 
 		<script>
-			// More info about config & dependencies:
-			// - https://github.com/hakimel/reveal.js#configuration
-			// - https://github.com/hakimel/reveal.js#dependencies
 			Reveal.initialize({
+				transition: 'slide',
+				backgroundTransition: 'slide', // set background transitions to match 
+
+				controls: true, // turn controls on for the master
+				keyboard: true,
+				touch: true,
+				history: true,
+
+				viewDistance: 3, // use lazy loading to force updates to polls to happen only when the slide is active 
+
+				multiplex: {
+					secret: '15350195538036439251', // Gives this (the master) control of the presentation
+					id: '626c5fb1f2331dee', // id, obtained from socket.io server
+					url: 'https://reveal-js-multiplex-ccjbegmaii.now.sh' // Location of socket.io server
+				},
+
 				dependencies: [
-					{ src: 'plugin/markdown/marked.js' },
-					{ src: 'plugin/markdown/markdown.js' },
-					{ src: 'plugin/notes/notes.js', async: true },
-					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
+					{ src: '//cdn.socket.io/socket.io-1.3.5.js', async: true },
+					{ src: 'plugin/inline_svg.js', async: true },
+					{ src: 'plugin/multiplex/master.js', async: true },
+// 					{ src: 'plugin/multiplex/client.js', async: true }, // including this as well allows multiple copies to control one another, however it will get upset with fast slide changes!
+					{ src: 'plugin/external/external.js', condition: function() { return !!document.querySelector( '[data-external],[data-external-replace]' ); } },
+// 					{ src: 'plugin/markdown/marked.js' },
+// 					{ src: 'plugin/markdown/markdown.js' },
+// 					{ src: 'plugin/notes/notes.js', async: true },
+// 					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
 				]
 			});
+			Reveal.addEventListener('slidechanged', function(event) { // call http requests on slide change
+				var httpRequest = event.currentSlide.getAttribute('httpRequest');
+				if (httpRequest) httpGetAsync(httpRequest);                  
+			});
+			function httpGetAsync(theUrl) {
+				var xmlHttp = new XMLHttpRequest();
+				xmlHttp.open("GET", theUrl, true); // true for asynchronous 
+				xmlHttp.send(null);
+			}
+			
+			var iframeInterval = null;
+			Reveal.addEventListener( 'slidechanged', function( event ) {
+				var reloadInterval = event.currentSlide.getAttribute('reloadInterval');
+				if (reloadInterval) iframeInterval = window.setInterval(reloadSlideIFrames, +reloadInterval)
+				else  clearInterval(iframeInterval);
+			} );
+			function reloadSlideIFrames() { 
+				var iframes = Reveal.getCurrentSlide().getElementsByTagName("iframe");
+				for (var i = 0; i < iframes.length; i++) {
+					if (iframes[i].style.display = 'none') {
+						iframes[i].src += '';
+						iframes[i].onload = function() {
+							this.style.display = 'block';
+							document.getElementById(this.getAttribute('copyOf')).onload = null;
+							document.getElementById(this.getAttribute('copyOf')).style.display = 'none';
+						};
+					};
+				};
+			}
+
 		</script>
 	</body>
 </html>
