--- a/client.html
+++ b/client.html
@@ -37,6 +37,7 @@
 				dependencies: [
 					{ src: '//cdn.socket.io/socket.io-1.3.5.js', async: true },
 					{ src: 'plugin/inline_svg.js', async: true  },
+      				{ src: 'plugin/zoom-js/zoom.js', async: true },
 					{ src: 'plugin/multiplex/client.js', async: true },
 					{ src: 'plugin/external/external.js', condition: function() { return !!document.querySelector( '[data-external],[data-external-replace]' ); } },
 // 					{ src: 'plugin/markdown/marked.js' },
