--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
 				dependencies: [
 					{ src: '//cdn.socket.io/socket.io-1.3.5.js', async: true },
 					{ src: 'plugin/inline_svg.js', async: true },
+      				{ src: 'plugin/zoom-js/zoom.js', async: true },
 					{ src: 'plugin/multiplex/master.js', async: true },
 // 					{ src: 'plugin/multiplex/client.js', async: true }, // including this as well allows multiple copies to control one another, however it will get upset with fast slide changes!
 					{ src: 'plugin/external/external.js', condition: function() { return !!document.querySelector( '[data-external],[data-external-replace]' ); } },
@@ -48,35 +49,48 @@
 // 					{ src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } }
 				]
 			});
-			Reveal.addEventListener('slidechanged', function(event) { // call http requests on slide change
-				var httpRequest = event.currentSlide.getAttribute('httpRequest');
-				if (httpRequest) httpGetAsync(httpRequest);                  
-			});
-			function httpGetAsync(theUrl) {
-				var xmlHttp = new XMLHttpRequest();
-				xmlHttp.open("GET", theUrl, true); // true for asynchronous 
-				xmlHttp.send(null);
-			}
+// 			Reveal.addEventListener('slidechanged', function(event) { // call http requests on slide change
+// 				var httpRequest = event.currentSlide.getAttribute('httpRequest');
+// 				if (httpRequest) httpGetAsync(httpRequest);                  
+// 			});
+// 			function httpGetAsync(theUrl) {
+// 				var xmlHttp = new XMLHttpRequest();
+// 				xmlHttp.open("GET", theUrl, true); // true for asynchronous 
+// 				xmlHttp.send(null);
+// 			}
 			
-			var iframeInterval = null;
-			Reveal.addEventListener( 'slidechanged', function( event ) {
-				var reloadInterval = event.currentSlide.getAttribute('reloadInterval');
-				if (reloadInterval) iframeInterval = window.setInterval(reloadSlideIFrames, +reloadInterval)
-				else  clearInterval(iframeInterval);
+// 			var iframeInterval = null;
+// 			Reveal.addEventListener( 'slidechanged', function( event ) {
+// 				var reloadInterval = event.currentSlide.getAttribute('reloadInterval');
+// 				if (reloadInterval) iframeInterval = window.setInterval(reloadSlideIFrames, +reloadInterval)
+// 				else  clearInterval(iframeInterval);
+// 			} );
+// 			function reloadSlideIFrames() { 
+// 				var iframes = Reveal.getCurrentSlide().getElementsByTagName("iframe");
+// 				for (var i = 0; i < iframes.length; i++) {
+// 					if (iframes[i].style.display = 'none') {
+// 						iframes[i].src += '';
+// 						iframes[i].onload = function() {
+// 							this.style.display = 'block';
+// 							document.getElementById(this.getAttribute('copyOf')).onload = null;
+// 							document.getElementById(this.getAttribute('copyOf')).style.display = 'none';
+// 						};
+// 					};
+// 				};
+// 			}
+			
+			// add listeners for zooming on fragments
+			Reveal.addEventListener( 'fragmentshown', function( event ) {
+				var zoomId = event.fragment.getAttribute('data-zoom');
+				if (zoomId==="") {
+					zoom.out()
+				} else {
+					zoom.to({ element: Reveal.getCurrentSlide().querySelectorAll("#"+zoomId)[0] });
+				}
 			} );
-			function reloadSlideIFrames() { 
-				var iframes = Reveal.getCurrentSlide().getElementsByTagName("iframe");
-				for (var i = 0; i < iframes.length; i++) {
-					if (iframes[i].style.display = 'none') {
-						iframes[i].src += '';
-						iframes[i].onload = function() {
-							this.style.display = 'block';
-							document.getElementById(this.getAttribute('copyOf')).onload = null;
-							document.getElementById(this.getAttribute('copyOf')).style.display = 'none';
-						};
-					};
-				};
-			}
+			Reveal.addEventListener( 'fragmenthidden', function( event ) {
+				// event.fragment = the fragment DOM element
+			} );
 
 		</script>
 	</body>
